tests/baselines/reference/aliasInstantiationExpressionGenericIntersectionNoCrash.errors.txt
aliasInstantiationExpressionGenericIntersectionNoCrash.ts(10,1): error TS2352: Conversion of type 'typeof Err<U> & typeof Err<U>' to type 'typeof Err<U> & typeof Err<U>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Type 'typeof Err<U> & typeof Err<U>' is not comparable to type 'typeof Err<U>'.
    Type 'ErrImpl<number>' is not comparable to type 'ErrImpl<string>'.
      Type 'number' is not comparable to type 'string'.


==== aliasInstantiationExpressionGenericIntersectionNoCrash.ts (1 errors) ====
    class ErrImpl<E> {
      e!: E;
    }
    
    declare const Err: typeof ErrImpl & (<T>() => T);
    
    type ErrAlias<U> = typeof Err<U>;
    
    declare const e: ErrAlias<number>;
    e as ErrAlias<string>;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'typeof Err<U> & typeof Err<U>' to type 'typeof Err<U> & typeof Err<U>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Type 'typeof Err<U> & typeof Err<U>' is not comparable to type 'typeof Err<U>'.
!!! error TS2352:     Type 'ErrImpl<number>' is not comparable to type 'ErrImpl<string>'.
!!! error TS2352:       Type 'number' is not comparable to type 'string'.
    